[BE-109] Fix: 파워 유저, 인기 도서, 인기 리뷰 목록 조회 기능 오류 수정 및 페이징 최적화 (#45)
## 📋 관련 Issue

이슈 없음

## 🔗 Notion Task 링크
<!-- Task Tracker의 해당 항목 URL을 첨부해주세요 -->
- Notion:
**https://www.notion.so/3484cdeff67580da9380fff2aa75c1c5?source=copy_link**

## 🛠️ 작업 내용
<!-- 변경 사항 유형에 해당하는 항목만 작성해주세요 -->

### 🐛 버그 수정
- **인기 목록 조회 오류 해결**: 인기 도서, 인기 리뷰, 파워 유저 목록 조회 시 발생하던 쿼리 및 매핑 오류를 수정하여
정상적으로 데이터가 조회되도록 개선했습니다.


### ♻️ 리팩토링
- **인기 콘텐츠 조회 로직 이전**: 
- 기존 각 도메인 레포지토리(User, Book, Review)에 있던 인기 목록 조회 메서드들을 전용
레포지토리(`PopularReviewRepository` 등)로 이동하여 책임을 분리했습니다.
  - 레포지토리 이동 과정에서 쿼리 파라미터 값들을 다시 확인하고 로직에 맞게 수정했습니다.

- **페이징 응답 규격 변경 (`List` → `CursorPageResponse`)**:
- 도메인 서비스 계층에서 단순 `List`로 반환하던 인기 목록 조회 결과를 커서 기반 페이징 객체인
`CursorPageResponse`로 변경했습니다.
- 이에 맞춰 `ReviewServiceImpl`, `UserServiceImpl` , `BookServiceImpl` 서비스
구현체와 관련
` Controller` 로직을 모두 업데이트했습니다.

## 🧪 테스트
- [x] 로컬 빌드 및 컴파일 성공 확인 (`./gradlew compileJava`)
- [x] API 동작 확인 (Swagger를 통해 대시보드 관련 기능 동작 확인)

## ✅ 체크리스트
- [x] PR 제목 형식 확인: `[BE-{ID}] 작업 제목`
- [x] `application-local.yml`, `.env` 등 민감 파일 미포함 확인
- [x] Task Tracker의 GitHub PR 필드에 이 PR URL 기입
- [x] Task Tracker 상태를 **완료**로 변경

## 📎 참고 사항
<!-- 리뷰어가 알아야 할 배경 지식, 관련 문서, 특이사항 등 -->
도메인마다 parseLocalDateTime 기능이 공통으로 들어가서 추후에 공통 utill에 넣는 것도 고려해 보겠습니다.

---------

Co-authored-by: minjukoo <168660759+minjukoo@users.noreply.github.com>
Co-authored-by: sungho <135408197+parksh3070@users.noreply.github.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>