@@ -7,36 +7,43 @@ import com.deokhugam.deokhugam_server.domain.user.dto.request.UserRegisterReques
 import com.deokhugam.deokhugam_server.domain.user.dto.request.UserUpdateRequest;
 import com.deokhugam.deokhugam_server.domain.user.dto.response.PowerUserDto;
 import com.deokhugam.deokhugam_server.domain.user.entity.PowerUser;
+import com.deokhugam.deokhugam_server.domain.user.repository.PowerUserRepository;
+import com.deokhugam.deokhugam_server.global.response.CursorPageResponse;
 import com.deokhugam.deokhugam_server.global.type.Period;
 import com.deokhugam.deokhugam_server.domain.user.dto.response.UserDto;
 import com.deokhugam.deokhugam_server.domain.user.entity.User;
 import com.deokhugam.deokhugam_server.domain.user.mapper.UserMapper;
 import com.deokhugam.deokhugam_server.domain.user.repository.UserRepository;
 import com.deokhugam.deokhugam_server.global.exception.DeokhugamException;
-import com.deokhugam.deokhugam_server.global.util.PeriodUtil;
+import java.time.Instant;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Limit;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
-public class UserServiceImpl implements UserService{
+public class UserServiceImpl implements UserService {
+
   private final UserRepository userRepository;
   private final UserMapper userMapper;
   private final PasswordEncoder passwordEncoder;
+  private final PowerUserRepository powerUserRepository;
 
   @Override
   @Transactional
   public UserDto register(UserRegisterRequest request) {
-    if(userRepository.existsByEmail(request.email())) {
+    if (userRepository.existsByEmail(request.email())) {
       throw new DeokhugamException(DUPLICATE_EMAIL);
     }
-    if(userRepository.existsByNickname(request.nickname())) {
+    if (userRepository.existsByNickname(request.nickname())) {
       throw new DeokhugamException(DUPLICATE_NICKNAME);
     }
     String encodedPassword = passwordEncoder.encode(request.password());
@@ -66,15 +73,29 @@ public class UserServiceImpl implements UserService{
   }
 
   @Override
-  public List<PowerUserDto> findPowerUsers(Period period, String direction, String cursor, String after,
-      int limit) {
-    LocalDateTime startTime = PeriodUtil.calculateStartTime(period);
-    List<PowerUser> powerUsers = userRepository.findPowerUsersWithPaging(
-        startTime, direction, cursor, after, limit
+  public CursorPageResponse<PowerUserDto> findPowerUsers(Period period, String direction,
+      String cursor, String after, int limit) {
+    Integer cursorRank = (cursor != null && !cursor.isBlank()) ? Integer.parseInt(cursor) : null;
+    LocalDateTime afterLdt = parseLocalDateTime(after);
+
+    List<PowerUser> powerUsers = powerUserRepository.findPowerUsersByRequirements(
+        period, direction.toUpperCase(), cursorRank, afterLdt,
+        Limit.of(limit + 1)
     );
-    return powerUsers.stream()
-        .map(userMapper::toPowerUserDto)
-        .collect(Collectors.toList());
+
+    long totalElements = powerUserRepository.countByPeriodType(period);
+
+    boolean hasNext = powerUsers.size() > limit;
+    List<PowerUser> content = hasNext ? powerUsers.subList(0, limit) : powerUsers;
+
+    String nextCursor =
+        content.isEmpty() ? null : String.valueOf(content.get(content.size() - 1).getRankOrder());
+    LocalDateTime nextAfter =
+        content.isEmpty() ? null : content.get(content.size() - 1).getCreatedAt();
+    return new CursorPageResponse<>(
+        content.stream().map(userMapper::toPowerUserDto).toList(),
+        nextCursor, nextAfter, content.size(), totalElements, hasNext
+    );
   }
 
   @Override
@@ -104,6 +125,19 @@ public class UserServiceImpl implements UserService{
     userRepository.findById(userId)
         .orElseThrow(() -> new DeokhugamException(USER_NOT_FOUND));
     userRepository.deleteById(userId);
+  }
+  private LocalDateTime parseLocalDateTime(String after) {
+    if (after == null || after.isBlank())
+      return null;
+    try {
+      ZoneId kstZone = ZoneId.of("Asia/Seoul");
+      if (after.endsWith("Z")) {
+        return LocalDateTime.ofInstant(Instant.parse(after), kstZone);
+      }
+      return LocalDateTime.parse(after);
+    } catch (Exception e) {
+      return LocalDate.parse(after.substring(0, 10)).atStartOfDay();
+    }
   }
 
 }
